# new-api-audit-for-company

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PROGRESS_UBUNTU.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
deploy/: docker-compose.yml
deploy/scripts/: deploy-token-audit.sh  run-daily-audit.sh
docker/: entrypoint.sh
docs/i18n/: README.en.md  README.ja.md  README.ko.md
frontend/admin/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/admin/src/: App.tsx  index.css  main.tsx
patches/: new-api-audit-hook.patch
sql/: schema.mysql.sql
tests/: test_llm_classifier.py  test_service.py  test_wecom.py
token_audit/: __init__.py  admin.py  audit_users.py  classifier.py  cli.py  config.py  crypto.py  db.py  jobs.py  llm_classifier.py  main.py  models.py  reports.py  repository.py  schemas.py  timeutil.py  wecom.py  work_summary.py
